--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "homepage": "https://github.com/maxvl3/blok-tech#readme",
   "dependencies": {
     "camelcase": "^6.3.0",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "express-handlebars": "^6.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
