--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
   },
   "homepage": "https://github.com/maxvl3/blok-tech#readme",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "camelcase": "^6.3.0",
     "express": "^4.17.2",
-    "express-handlebars": "^6.0.2"
+    "express-handlebars": "^6.0.2",
+    "multer": "^1.4.4",
+    "slug": "^5.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
