--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "multer": "^1.4.4",
+    "pug": "^3.0.2",
     "slug": "^5.2.0"
   },
   "devDependencies": {
