--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   "dependencies": {
     "body-parser": "^1.19.2",
     "camelcase": "^6.3.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "mongodb": "^4.4.1",
+    "mongoose": "^6.2.5",
     "multer": "^1.4.4",
-    "pug": "^3.0.2",
     "slug": "^5.2.0"
   },
   "devDependencies": {
