--- a/package.json
+++ b/package.json
@@ -23,14 +23,10 @@
   "homepage": "https://github.com/maxvl3/blok-tech#readme",
   "dependencies": {
     "body-parser": "^1.19.2",
-    "camelcase": "^6.3.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
-    "mongodb": "^4.4.1",
-    "mongoose": "^6.2.5",
-    "multer": "^1.4.4",
-    "slug": "^5.2.0"
+    "mongodb": "^4.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
