--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "een filter optie",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "start:dev": "nodemon index.js"
   },
   "repository": {
