--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
-    "mongodb": "^4.4.1"
-  },
-  "devDependencies": {
+    "mongodb": "^4.4.1",
     "nodemon": "^2.0.15"
   }
 }
