--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "express-handlebars": "^6.0.2",
     "mongodb": "^4.4.1",
     "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "eslint": "^8.11.0"
   }
 }
